crates/zenith/tests/snapshots/screens__session_disconnected__160x48__night.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·                        ••      ·        ∙  ·                                        ? keys


























      ▄▄██████▄▄
    ▄████████████▄
   ▄████              SOLAR
   ████████████████   The central API of the Constellation
   ████████████████   NIPS-CERN
              ████▀   0.1.0
    ▀████████████▀
      ▀▀██████▀▀

   · Connected to SOLAR 0.1.0 in 1.84 ms: protocol solar/1, manifest 2.0.0, 5 APIs.
     This SOLAR has no solar.cancel. Type / for the commands, or ? for every key.
 › /ping
    closed   solar.ping: the connection ended before SOLAR answered
    error   SOLAR exited with code 101 after 3m connected, with 1 call still waiting.
            Its last words are below and the Log tab has the rest. Ctrl+R starts it again.
              thread 'main' panicked at crates/solar-core/src/dispatch.rs:120:9:
              the dispatcher was told to fall over
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ › Type / for the commands, or ? for every key.                                                                                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 ──○── SOLAR disconnected · exited with code 101 ─── Ctrl+R reconnect ─────────────────────────────────────────────────────────────────────────────────────────
--- every cell not listed is #F5F1E8 on #0B0C14
 0:  0-7   #FFC23D on #0B0C14 bold
 0: 10-18  #FFC23D on #0B0C14 bold underlined
 0: 21-26  #9C9A97 on #0B0C14
 0: 29-33  #9C9A97 on #0B0C14
 0: 36-44  #9C9A97 on #0B0C14
 0: 45-152 #646365 on #0B0C14
 0:153-153 #FFC23D on #0B0C14 bold
 0:154-159 #9C9A97 on #0B0C14
27:  3-18  #FFC23D on #0B0C14
28:  3-18  #FFC23D on #0B0C14
29:  3-18  #FFC23D on #0B0C14
29: 22-26  #FFC23D on #0B0C14 bold
30:  3-18  #FFC23D on #0B0C14
31:  3-18  #FFC23D on #0B0C14
31: 22-30  #9C9A97 on #0B0C14
32:  3-18  #FFC23D on #0B0C14
32: 22-26  #9C9A97 on #0B0C14
33:  3-18  #FFC23D on #0B0C14
34:  3-18  #FFC23D on #0B0C14
36:  3-3   #FFC23D on #0B0C14
38:  0-7   #FFC23D on #0B0C14
39:  3-10  #D98E1F on #0B0C14 bold reversed
39: 13-22  #FFC23D on #0B0C14
40:  3-9   #D98E1F on #0B0C14 bold reversed
40: 12-84  #D98E1F on #0B0C14 bold
44:  0-159 #646365 on #0B0C14
45:  0-0   #646365 on #0B0C14
45:  1-3   #FFC23D on #0B0C14
45:  4-47  #9C9A97 on #0B0C14
45:159-159 #646365 on #0B0C14
46:  0-159 #646365 on #0B0C14
47:  0-2   #646365 on #0B0C14
47:  3-3   #D98E1F on #0B0C14 bold
47:  4-6   #646365 on #0B0C14
47:  7-24  #D98E1F on #0B0C14 bold
47: 25-27  #9C9A97 on #0B0C14
47: 48-52  #646365 on #0B0C14
47: 53-58  #FFC23D on #0B0C14 bold
47: 59-68  #9C9A97 on #0B0C14
47: 69-159 #646365 on #0B0C14
